# pyflam

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
docs/: crown_plume_coupling.md  pyflam_scientific_report.md  pyflam_scientific_report_IT.md
docs/report/: _sanitize_for_pdf.py  build.sh  pyflam_report_EN.docx  pyflam_report_IT.docx
pyflam_gui/: Home.py  README.md  __init__.py
pyflam_gui/.streamlit/: config.toml
pyflam_gui/core/: __init__.py  aoi.py  atmosphere.py  landscape.py  maps.py  outputs.py  plotting.py  propagation.py  pyroconv.py  state.py
pyflam_gui/pages/: 1_Fire_Weather_Preview.py  2_Realtime_Propagation.py  3_Event_Reanalysis.py  4_Burn_Probability.py
src/pyflam/: __init__.py  atmosphere.py  crownfire.py  fuel_conditioning.py  fuel_models.py  io_lcp.py  landscape.py  meteo_report.py  mtt.py  nrt.py  operative.py  pyroconvection.py  rothermel.py  spotting.py  units.py  validate.py  wind.py  wind_reduction.py  windsolver.py
src/pyflam/cfd/: __init__.py  case.py  dictwriter.py  mesh.py  read.py  run.py
tests/: CFD_VALIDATION.md  REFERENCE.md  benchmark_propagation.py  build_canopy_landscape_tuscany.py  fetch_canopy_tuscany.sh  final_run_tuscany.py  make_synthetic_canopy_lcp.py  pyroconv_daily.py  test_atmosphere.py  test_cfd_case.py  test_cfd_dictwriter.py  test_cfd_integration.py  test_cfd_mesh.py  test_cfd_read.py  test_cfd_run.py  test_crown_coupling.py  test_crown_march.py  test_crown_spotting.py  test_crownfire.py  test_crownfire_cruz.py  test_fast_marching.py  test_feedback_stability.py  test_fuel_conditioning.py  test_gui_core.py  test_io_lcp.py  test_landscape.py  test_meteo_report.py  test_mtt.py  test_nrt.py  test_operative.py  test_pyro_march.py  test_pyroconvection.py  test_pyroconvection_potential.py  test_pyroconvection_type.py  test_rothermel.py  test_scott_burgan.py  test_spotting.py  test_synthetic_canopy_lcp.py  test_validate.py  test_validate_crown.py  (+7 more)
