[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflam"
version = "0.1.0"
description = "Open, multiplatform wildfire-behavior modelling for management, planning and suppression — weather-driven and fire-atmosphere coupled"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pyflam contributors" }]
dependencies = ["numpy>=1.23", "scipy>=1.9"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]
# Geospatial: landscape (.lcp / GeoTIFF) I/O, GeoJSON reprojection, and
# contour-traced perimeter polygons.
geo = ["rasterio>=1.3", "pyproj>=3.4", "scikit-image>=0.20"]
# Atmospheric forcing (weather/reanalysis): xarray reads downloaded forecast /
# reanalysis files; cfgrib for GRIB (GFS), cdsapi to fetch ERA5 from Copernicus.
atmos = ["xarray>=2023.1", "cfgrib>=0.9", "netcdf4>=1.6", "cdsapi>=0.6"]
# Acceleration: Numba JIT for the Gauss-Seidel anisotropic-Eikonal sweep
# (minimum_travel_time method="fast_marching"); falls back to NumPy if absent.
accel = ["numba>=0.58"]
# GUI: the Streamlit multipage app in pyflam_gui/ (interactive AOI map via
# streamlit-folium, charts via matplotlib/pandas). Pair with [geo] and [atmos]
# for real landscapes and weather: pip install -e ".[gui,geo,atmos]".
gui = [
    "streamlit>=1.30",
    "streamlit-folium>=0.18",
    "folium>=0.15",
    "matplotlib>=3.6",
    "pandas>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pyflam"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
